--- a/public/viewer.css
+++ b/public/viewer.css
@@ -1,7 +1,7 @@
 /* positionning */
 html,
 body {
-    display:flex;
+/*    display:flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
@@ -9,12 +9,17 @@ body {
     align-items: center;
     width: 100%;
     height: 100%;
-    overflow: hidden;
+    overflow: hidden;*/
 }
 
 /* add a cursor */
 #fidget-spinner {
-    cursor: move;
+    width: 75%;
+    height: 75%;
+}
+
+.header {
+    text-align: center;
 }
 
 /* some colors */
